[gd_scene load_steps=46 format=2]

[ext_resource path="res://level select/home screen.png" type="Texture2D" id=1]
[ext_resource path="res://level select/home screen hover.png" type="Texture2D" id=2]
[ext_resource path="res://level select/home screen press.png" type="Texture2D" id=3]
[ext_resource path="res://Boy Walk/Boy Walk Frame 1.png" type="Texture2D" id=4]
[ext_resource path="res://Boy Walk/Boy Walk Frame 4.png" type="Texture2D" id=5]
[ext_resource path="res://Boy Walk/Boy Walk Frame 3.png" type="Texture2D" id=6]
[ext_resource path="res://Boy Walk/Boy Walk Frame 6.png" type="Texture2D" id=7]
[ext_resource path="res://Boy Walk/Boy Walk Frame 2.png" type="Texture2D" id=8]
[ext_resource path="res://Boy Walk/Boy Walk Frame 5.png" type="Texture2D" id=9]
[ext_resource path="res://game development tileset/Cave Background Finished - Final.png" type="Texture2D" id=10]
[ext_resource path="res://home.gd" type="Script" id=11]
[ext_resource path="res://game development tileset/dominicdooranimspritesheet.png" type="Texture2D" id=12]
[ext_resource path="res://Girl Walk/Girl Walk Frame 6.png" type="Texture2D" id=13]
[ext_resource path="res://Girl Walk/Girl Walk Frame 2.png" type="Texture2D" id=14]
[ext_resource path="res://Girl Walk/Girl Walk Frame 3.png" type="Texture2D" id=15]
[ext_resource path="res://Girl Walk/Girl Walk Frame 5.png" type="Texture2D" id=16]
[ext_resource path="res://Girl Walk/Girl Walk Frame 4.png" type="Texture2D" id=17]
[ext_resource path="res://Girl Walk/Girl Walk Frame 1.png" type="Texture2D" id=18]
[ext_resource path="res://credits.gd" type="Script" id=19]
[ext_resource path="res://Idles/Boy Idle.png" type="Texture2D" id=20]
[ext_resource path="res://Idles/Girl Idle.png" type="Texture2D" id=21]
[ext_resource path="res://game development tileset/AROHATitle.png" type="Texture2D" id=22]
[ext_resource path="res://game development tileset/Open Door.png" type="Texture2D" id=23]
[ext_resource path="res://tiles/bricks.png" type="Texture2D" id=24]
[ext_resource path="res://tiles/nobricks.png" type="Texture2D" id=25]
[ext_resource path="res://game development tileset/Door.png" type="Texture2D" id=26]
[ext_resource path="res://Girl Jump Frame 1.png" type="Texture2D" id=27]
[ext_resource path="res://Girl Jump Frame 2.png" type="Texture2D" id=28]
[ext_resource path="res://GajrajOne-Regular.ttf" type="FontFile" id=29]

[sub_resource type="FontFile" id=16]
size = 112
font_data = ExtResource( 29 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "stand",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 12 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 12 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 12 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 12 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ), SubResource( 11 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="TileSet" id=13]
0/name = "bricks.png 0"
0/texture = ExtResource( 24 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "nobricks.png 1"
1/texture = ExtResource( 25 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 26 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 23 ), ExtResource( 26 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
process_mode = 2
script = ExtResource( 19 )

[node name="home" type="TextureButton" parent="."]
offset_left = 7.0
offset_top = 1211.0
offset_right = 71.0
offset_bottom = 1275.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )
script = ExtResource( 11 )

[node name="CaveBackgroundFinished-Final" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.690196 )
position = Vector2( 1120, 640 )
z_index = -1000
texture = ExtResource( 10 )

[node name="title" type="Sprite2D" parent="."]
position = Vector2( 1158, 611 )
scale = Vector2( 5, 5 )
texture = ExtResource( 22 )

[node name="created by" type="Label" parent="."]
offset_left = 549.0
offset_top = 1331.0
offset_right = 654.0
offset_bottom = 1447.0
custom_fonts/font = SubResource( 16 )
text = "Created by


Matthew Rickard

Levi Donaldson

Akash Chattikal"
align = 1

[node name="boy" type="AnimatedSprite2D" parent="."]
position = Vector2( -200, 800 )
scale = Vector2( 10, 10 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="girl" type="AnimatedSprite2D" parent="."]
position = Vector2( 2480, 800 )
scale = Vector2( 10, 10 )
frames = SubResource( 2 )
frame = 2
playing = true
flip_h = true

[node name="wall" type="AnimatedSprite2D" parent="."]
position = Vector2( 1161, 644 )
scale = Vector2( 10, 20 )
frames = SubResource( 12 )

[node name="art" type="Label" parent="."]
offset_left = 549.0
offset_top = 1331.0
offset_right = 654.0
offset_bottom = 1464.0
custom_fonts/font = SubResource( 16 )
text = "Art


Character design

Akash Chattikal


Background design

Akash Chattikal


Level art

Levi Donaldson


Ui / menu design

Levi Donaldson"
align = 1

[node name="boy2" type="AnimatedSprite2D" parent="."]
position = Vector2( -181, 320 )
scale = Vector2( 6, 6 )
z_index = 1
frames = SubResource( 1 )
playing = true

[node name="girl2" type="AnimatedSprite2D" parent="."]
position = Vector2( 2416, 959 )
scale = Vector2( 6, 6 )
z_index = 1
frames = SubResource( 2 )
frame = 4
playing = true
flip_h = true

[node name="level" type="Label" parent="."]
offset_left = 42.0
offset_top = 5229.0
offset_right = 263.0
offset_bottom = 5583.0
custom_fonts/font = SubResource( 16 )
text = "Level design
                     Matthew Rickard
                     Levi Donaldson

           Monet Mo 
           (Helped create level 3)"

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 5202 )
scale = Vector2( 2, 2 )
tile_set = SubResource( 13 )
format = 1
tile_data = PackedInt32Array( 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0 )

[node name="Door" type="AnimatedSprite2D" parent="."]
modulate = Color( 0.72549, 0.709804, 1, 1 )
position = Vector2( 2051, 5522 )
scale = Vector2( 6, 6 )
frames = SubResource( 14 )

[node name="Door2" type="AnimatedSprite2D" parent="."]
modulate = Color( 1, 0.709804, 0.952941, 1 )
position = Vector2( 255, 6162 )
scale = Vector2( 6, 6 )
frames = SubResource( 15 )
frame = 1

[node name="girl3" type="AnimatedSprite2D" parent="."]
position = Vector2( 2099, 1503 )
scale = Vector2( 6, 6 )
z_index = -1
frames = SubResource( 2 )
animation = "jump"
flip_h = true

[node name="programming" type="Label" parent="."]
offset_left = 573.0
offset_top = 1545.0
offset_right = 1674.0
offset_bottom = 3054.0
custom_fonts/font = SubResource( 16 )
text = "Programming

Main coding

Matthew Rickard

Code helper

Levi Donaldson"
align = 1

[node name="sound" type="Label" parent="."]
offset_left = 621.0
offset_top = 1521.0
offset_right = 1621.0
offset_bottom = 2526.0
custom_fonts/font = SubResource( 16 )
text = "Sound


Sound director

Akash Chattikal"
align = 1

[node name="thanks" type="Label" parent="."]
offset_left = 433.0
offset_top = 1300.0
offset_right = 569.0
offset_bottom = 1824.0
custom_fonts/font = SubResource( 16 )
text = "Special thanks to


Monet Mo

Dominic McLauchlan

Jackie Huang

Elvis Huang

Samuel O'Sullivan


Godot Engine











Thanks for playing!

Now go look for the
secret in level 6 
because it is very fun"
align = 1

[connection signal="pressed" from="home" to="home" method="_on_home_pressed"]
